--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "url": "https://github.com/sirmikecarter/teamschatbot.git"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "botbuilder": "~4.6.0",
         "dotenv": "^8.0.0",
+        "querystring": "^0.2.0",
         "restify": "~8.3.3"
     },
     "devDependencies": {
