--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "botbuilder": "~4.6.0",
+        "botbuilder-ai": "^4.6.2",
         "dotenv": "^8.0.0",
         "querystring": "^0.2.0",
         "restify": "~8.3.3"
