--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "botbuilder-dialogs": "^4.6.2",
         "dotenv": "^8.0.0",
         "querystring": "^0.2.0",
-        "restify": "~8.3.3"
+        "restify": "~8.3.3",
+        "wtf_wikipedia": "^7.8.1"
     },
     "devDependencies": {
         "eslint": "^6.0.1",
